# mariadb-server

./: CMakeLists.txt  config.h.cmake  configure.cmake
client/: client_priv.h  mysqldump.c
include/: my_pthread.h
libevent/: buffer.c  evbuffer.c  strlcpy.c
libmysqld/: CMakeLists.txt
man/: mysqldump.1
mysql-test/: mysql-test-run.pl
mysql-test/lib/: mtr_cases.pm
mysql-test/r/: mysqld--help.result
mysys_ssl/: my_crypt.cc
plugin/daemon_memcached/: CMakeLists.txt  README  README-daemon_memcached
plugin/daemon_memcached/daemon_memcached/: CMakeLists.txt  config_static.h
plugin/daemon_memcached/daemon_memcached/daemon/: memcached.c  memcached.h  memcached_mysql.cc  memcached_mysql.h  sasl_defs.c  sasl_defs.h  thread.c
plugin/daemon_memcached/daemon_memcached/include/: config_daemon_memcached.h.in
plugin/daemon_memcached/daemon_memcached/include/memcached/: context.h  engine.h
plugin/daemon_memcached/daemon_memcached/mysql-test/daemon_memcached/: my.cnf
plugin/daemon_memcached/daemon_memcached/mysql-test/daemon_memcached/include/: memcache_config.inc  memcached_config.inc
plugin/daemon_memcached/daemon_memcached/mysql-test/daemon_memcached/r/: maria_arithmetic.result  mysql_1_table.result  mysql_2_cols.result  mysql_2_intcols.result  mysql_2_tables.result  mysql_50_cols.result  mysql_5_cols.result  mysql_5_tables.result  mysql_5_tables_index.result  mysql_5_tables_uml.result  mysql_5_utf8.result  mysql_NULL_cols.result  mysql_add.result  mysql_cache_policy.result  mysql_container.result  mysql_container_errs.result  mysql_decr.result  mysql_default_table.result  mysql_delete.result  mysql_fkey_1.result  mysql_fkey_2.result  mysql_funcs_1.result  mysql_get.result  mysql_incr.result  mysql_index_1.result  mysql_index_2.result  mysql_index_3.result  mysql_index_4.result  mysql_lock.result  mysql_mdl_1.result  mysql_mdl_2.result  mysql_mdl_3.result  mysql_misc.result  mysql_misc_2.result  mysql_misc_3.result  mysql_r_batch_1.result  mysql_r_batch_2.result  mysql_r_batch_3.result  mysql_r_batch_4.result  mysql_r_batch_5.result  (+19 more)
plugin/daemon_memcached/daemon_memcached/mysql-test/daemon_memcached/t/: maria_arithmetic.test  maria_integers.test  maria_sep_multi.test  mysql_1_table.test  mysql_2_cols-master.opt  mysql_2_cols.test  mysql_2_intcols.test  mysql_2_tables.test  mysql_50_cols.test  mysql_5_cols.test  mysql_5_tables.test  mysql_5_tables_index.test  mysql_5_tables_uml.test  mysql_5_utf8.test  mysql_NULL_cols.test  mysql_add.test  mysql_cache_policy.test  mysql_container.test  mysql_container_errs.test  mysql_decr.test  mysql_default_table.test  mysql_delete.test  mysql_fkey_1.test  mysql_fkey_2.test  mysql_funcs_1.test  mysql_get.test  mysql_incr.test  mysql_index_1.test  mysql_index_2.test  mysql_index_3.test  mysql_index_4.test  mysql_lock.test  mysql_mdl_1.test  mysql_mdl_2.test  mysql_mdl_3.test  mysql_mdl_4.test  mysql_misc-master.opt  mysql_misc.test  mysql_misc_2-master.opt  mysql_misc_2.test  (+38 more)
plugin/daemon_memcached/daemon_memcached/scripts/: daemon_memcached_config.sql
plugin/daemon_memcached/daemon_memcached/utilities/: util.c
plugin/daemon_memcached/daemon_memcached_engine_ib/: CMakeLists.txt
plugin/daemon_memcached/innodb_memcache/: CMakeLists.txt
plugin/file_key_management/: file_key_management_plugin.cc
plugin/semisync/: semisync_master.cc  semisync_master.h  semisync_master_plugin.cc  semisync_slave_plugin.cc
sql/: CMakeLists.txt  group_by_handler.cc  handler.cc  handler.h  item_cmpfunc.cc  log.cc  log_event.cc  mysqld.cc  mysqld.h  parse_file.cc  rpl_handler.cc  rpl_rli.h  sql_base.cc  sql_class.cc  sql_class.h  sql_plugin.cc  sql_repl.cc  sql_select.cc  sql_select.h  sql_table.cc  sql_view.cc  sys_vars.cc  table.cc  table.h  uniques.cc
storage/innobase/api/: api0api.cc
storage/innobase/handler/: ha_innodb.cc
storage/innobase/include/: api0api.h
storage/innobase/sync/: sync0sync.cc  sync0sync.cc.orig
storage/maria/: ma_blockrec.c
storage/sequence/: sequence.cc
storage/xtradb/api/: api0api.cc
storage/xtradb/fil/: fil0pagecompress.cc
(+111 files in other folders)
